--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,5 +23,11 @@ repository = "https://github.com/elabftw/elabapy"
 documentation = "https://example.com/docs"
 
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = ["setuptools>=64", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+package-dir = { "" = "src" }
+
+[project.scripts]
+dat = "dat.dat:main"
